--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.2"
+    "react-query": "^3.39.2",
+    "react-timer-hook": "^3.0.5",
+    "react-uuid": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
